# ms-mcp-public

./: README.md  requirements.txt
PortfolioMcp/: .dockerignore  .env.example  .gitignore  docker-compose.yml  pyproject.toml  server.py
PortfolioMcp/config/: __init__.py  auth.py  settings.py
PortfolioMcp/database/: __init__.py  client.py  factory.py  repository.py
PortfolioMcp/models/: __init__.py  domain.py
PortfolioMcp/services/: __init__.py  portfolio_service.py  validators.py
PortfolioMcp/tools/: __init__.py  portfolio_tools.py
auth_mcp/: main.py  pyproject.toml
localFinance/: finance_tools.py  main.py  pyproject.toml  requirements.txt
localFinance/.github/agents/: IdeaAgent.agent.md
localFinance/plans/: plan.md  portfolioPlan.md
tools/: graphs.py
vis_mcp/: README.md  config.py  plot_utils.py  pyproject.toml  server.py
vis_mcp/tools/: __init__.py  charts.py  distributions.py  scatter.py
