[project]
name = "vis-mcp"
version = "0.1.0"
description = "Visualization MCP server for creating charts and graphs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "networkx"
]

[project.scripts]
vis-mcp = "vis_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
